<resources>
    <string name="app_name">Espresso</string>
    <string name="mainActivityTitle">MainActivity</string>
    <string name="secondActivityTitle">SecondActivity</string>
    <string name="go_back">Go back</string>
    <string name="next_activity">Next Activity</string>
    <string name="myfragmentTitle">MyFragment</string>
    <string name="argumentValue">argumentValue</string>
    <string name="argumentFragmentTitle">ArgumentFragmentTitle</string>
    <string name="listargfragment">ListArgFragment</string>
    <string name="goto_argumentfragmenttest">goto ArgumentFragmentTest</string>
    <string name="pick_image">Pick Image</string>
    <string name="picked_image">Picked Image</string>
    <string name="take_picture">take picture</string>
    <string name="taken_image">taken image</string>
    <string name="please_input">Please Input</string>
    <string name="open_dialog">Open Dialog</string>
    <string name="enter_text">Enter Text</string>
</resources>
